[gd_scene load_steps=7 format=3 uid="uid://dof2wgjkshw2s"]

[ext_resource type="Script" path="res://Pause_menu.gd" id="1_dapnb"]
[ext_resource type="Shader" path="res://Pause_menu.gdshader" id="2_u4uhj"]
[ext_resource type="Script" path="res://VolumeSlider.gd" id="3_3x1r6"]
[ext_resource type="Script" path="res://WindowMode.gd" id="3_k7elw"]
[ext_resource type="Script" path="res://ResolutionMode.gd" id="3_navas"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybcjs"]
shader = ExtResource("2_u4uhj")
shader_parameter/amount = 1.0

[node name="Control" type="CanvasLayer"]
layer = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dapnb")

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_ybcjs")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Option" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitToMainMenue" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menue"

[node name="QuitToDesktop" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop
"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WindowMode" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("3_k7elw")

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2/WindowMode"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Window Mode"

[node name="VSeparator" type="VSeparator" parent="Control/MarginContainer/VBoxContainer2/WindowMode"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Control/MarginContainer/VBoxContainer2/WindowMode"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
allow_reselect = true

[node name="ResolutionMode" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("3_navas")

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2/ResolutionMode"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Aufl√∂sung"

[node name="VSeparator" type="VSeparator" parent="Control/MarginContainer/VBoxContainer2/ResolutionMode"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Control/MarginContainer/VBoxContainer2/ResolutionMode"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
allow_reselect = true

[node name="Master Volume" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Master Volume"
horizontal_alignment = 1

[node name="Master Volume Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3_3x1r6")
bus_name = "Master"

[node name="Music Volume" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Music Volume"
horizontal_alignment = 1

[node name="Music Volume Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3_3x1r6")
bus_name = "Music"

[node name="SFX Volume" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFX Volume Slider" type="HSlider" parent="Control/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3_3x1r6")
bus_name = "SFX"

[node name="Back" type="Button" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Back to Menue"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Resume" to="Control" method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Option" to="Control" method="_on_option_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/QuitToMainMenue" to="Control" method="_on_quit_to_main_menue_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/QuitToDesktop" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/QuitToDesktop" to="Control" method="_on_quit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/Back" to="Control" method="_on_back_pressed"]
